# xrandrw

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  cosmic-ray.toml  pyproject.toml  xrandrw.conf.sample  xrandrw.py
.github/workflows/: ci.yml  mutation.yml  regression.yml  release.yml
ci/: check_l3_stamp.sh  mutation_sanity_kill.sh
src/xrandrw/: apply.py  cli.py  config.py  dwmipc.py  logging_utils.py  policy.py  profiles.py  relocate.py  state.py  touch.py  wallpaper.py  watch.py  windows.py  xrandr.py
systemd/: xrandrw.service
tests/: conftest.py  dwmipc_fake_server.py  mutation-baseline.txt  randr_fixtures.py  test_apply.py  test_apply_branches.py  test_apply_place_externals_golden.py  test_cli_dispatch.py  test_cli_seed.py  test_cli_set_pref.py  test_cli_window_state.py  test_config.py  test_dwmipc_api.py  test_dwmipc_env.py  test_dwmipc_fuzz.py  test_dwmipc_parse.py  test_dwmipc_transport.py  test_fake_server_stateful.py  test_live_dwm_isolation.py  test_logging_utils.py  test_mutation_kills.py  test_native_read.py  test_policy.py  test_profiles.py  test_regression_no_ipc.py  test_regression_rpi4_core.py  test_relocate_control.py  test_relocate_coverage.py  test_relocate_guard_precision.py  test_relocate_lifecycle.py  test_relocate_watch.py  test_state.py  test_state_hardening.py  test_state_lock.py  test_touch.py  test_wallpaper.py  test_watch.py  test_windows_capture.py  test_windows_functional.py  test_windows_identity.py
tests/functional/: L3_PASS.stamp  README.md  conftest.py  dummy-2head.conf  test_relocate_e2e.py  test_wallpaper_e2e.py
tests/functional/dwm/: config.h  dwm-ipc.diff
