[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xrandrw"
version = "0.1.0"
description = "Robust, zero-config X11 display hotplug policy daemon for dwm/i3"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [{ name = "Klein Panic" }]
keywords = ["xrandr", "x11", "display", "hotplug", "systemd", "dwm"]
classifiers = [
  "Environment :: X11 Applications",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Desktop Environment :: Window Managers",
]
dependencies = ["python-xlib>=0.31"]

[project.optional-dependencies]
journald = ["systemd-python"]
wallpaper = ["Pillow"]
test = ["pytest"]

[project.scripts]
xrandrw = "xrandrw.cli:main"

[project.urls]
Homepage = "https://github.com/kleinpanic/xrandrw"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
