[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xrandrw"
version = "0.2.0"
description = "Robust, zero-config X11 display hotplug policy daemon for dwm/i3"
readme = "README.md"
# 3.9 is the real floor, not an aspiration: logging_utils.py uses shlex.join
# (3.8+), CI tests 3.9/3.11/3.13, and [tool.ruff] target-version is py39.
# Declaring >=3.7 let a 3.7 install succeed and then crash on the first
# LOG_LEVEL=debug command. Untested support is worse than no support.
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Klein Panic" }]
keywords = ["xrandr", "x11", "display", "hotplug", "systemd", "dwm"]
classifiers = [
  "Environment :: X11 Applications",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  # Per-version classifiers matching requires-python = ">=3.9". Without these
  # PyPI's sidebar shows only a bare "3" and gives no signal about the supported
  # range. 3.9/3.11/3.13 are exercised directly by the CI test matrix; 3.10 and
  # 3.12 are claimed as in-range between tested versions.
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Desktop Environment :: Window Managers",
]
dependencies = ["python-xlib>=0.31"]

[project.optional-dependencies]
journald = ["systemd-python"]
wallpaper = ["Pillow"]
test = ["pytest", "pytest-cov>=5"]
dev = ["pytest", "pytest-cov>=5", "ruff==0.15.*", "vulture>=2.11", "build"]

[project.scripts]
xrandrw = "xrandrw.cli:main"

[project.urls]
Homepage = "https://github.com/kleinpanic/xrandrw"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint.per-file-ignores]
# CI-04: the widened lint-strict gate (B,SIM,PERF,C90,UP,RUF over all of src/xrandrw/)
# surfaces a few knowingly-accepted complexity/perf hits that this test/lint hardening
# phase deliberately does NOT refactor. Suppressed via config (NOT inline `# noqa`) so the
# behavior-safe `--select UP,RUF,SIM` autofix probe stays RUF100-clean while the strict gate
# treats these as accepted. Each is a documented, intentional design, not a latent defect.
"src/xrandrw/state.py" = ["C901"]     # ensure_profile: identity-resolution + profile-merge policy
"src/xrandrw/windows.py" = ["C901"]   # capture_windows: multi-branch capture pipeline, each branch a documented degrade path
"src/xrandrw/xrandr.py" = ["PERF203"] # edid_sysfs_read: per-connector best-effort EDID read; each sysfs node fails independently

[tool.vulture]
# Dead-code gate. `frame` is the signal-handler's required second arg (signal API
# contract), structurally unused — the only legitimate false positive.
min_confidence = 80
paths = ["src"]
ignore_names = ["frame"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Deselect the real-dwm/X functional suite by DEFAULT so the fast unit runs
# (`pytest -q`, the test/coverage CI jobs) never try to stand up Xvfb/Xephyr/dwm
# -- the dedicated `functional` CI job opts back in with `pytest -m functional`,
# which overrides this marker expression.
addopts = "-m 'not functional'"
markers = [
  "functional: real Xephyr+Xvfb+dwm+dwm-ipc E2E (L1 gating on plain runner; L2 real Xorg+dummy non-gating); skipped locally without X/dwm, ERRORs (not skips) on CI",
]

[tool.mutmut]
# TEST-06 mutation testing, scoped to the three window-mgmt modules. mutmut 3.6 keys only
# (NO deprecated paths_to_mutate / tests_dir). B1 false-0-kill fix: the mutation runner MUST
# run in a NON-editable venv (see ci/mutation_sanity_kill.sh) AND `pytest_add_cli_args` clears
# the `pythonpath=["src"]` pytest override below, so pytest imports mutmut's mutated
# `mutants/src` copy instead of the un-mutated editable source. Run nightly via
# .github/workflows/mutation.yml, never per-PR.
source_paths = ["src/xrandrw"]
only_mutate = [
    "src/xrandrw/dwmipc.py",
    "src/xrandrw/windows.py",
    "src/xrandrw/relocate.py",
]
also_copy = ["tests/"]
pytest_add_cli_args_test_selection = [
    "tests/test_dwmipc_parse.py",
    "tests/test_dwmipc_env.py",
    "tests/test_dwmipc_fuzz.py",
    "tests/test_dwmipc_transport.py",
    "tests/test_dwmipc_api.py",
    "tests/test_relocate_control.py",
    "tests/test_relocate_coverage.py",
    "tests/test_relocate_lifecycle.py",
    "tests/test_relocate_guard_precision.py",
    "tests/test_relocate_watch.py",
    "tests/test_windows_capture.py",
    "tests/test_windows_identity.py",
    "tests/test_mutation_kills.py",
]
pytest_add_cli_args = ["-o", "pythonpath="]

[tool.coverage.run]
# TEST-07 M5: `branch` is DELIBERATELY NOT set here. A global branch flag would turn
# the scoped 3-module CI gate (dwmipc/windows/relocate, LINE-based) into a branch
# gate and could fail 95-100%-LINE modules on untouched code. Branch is opt-in
# per-run via `--cov-branch` on the WHOLE-PACKAGE ratchet ONLY (see ci.yml coverage).
source = ["xrandrw"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
